hc.js: testing/improving property support for simple types